--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Cuentas.cs" />
     <Compile Include="Depositos.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
